hphp/hack/test/sound_dynamic/typing/pessimise_builtins/vec.bad.php.exp
File "vec.bad.php", line 6, characters 10-23:
Invalid return type (Typing[4110])
  File "vec.bad.php", line 5, characters 27-27:
  Expected `C`
  File "vec.bad.php", line 6, characters 14-20:
  But got `dynamic`
