hphp/hack/test/sound_dynamic/typing/pessimise_builtins/vec.bad.php
<?hh

class C {}

function test_vec() : vec<C> {
  return vec<dynamic>[];
}
